use module references for terraform import command

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -117,7 +117,7 @@ jobs:
             echo "Found existing RDS instance: $DB_INSTANCE_ID"
             if ! terraform state list aws_db_instance.mlflow_db 2>/dev/null; then
               echo "Importing RDS instance into Terraform state..."
-              terraform import aws_db_instance.mlflow_db "$DB_INSTANCE_ID"
+              terraform import module.rds.aws_db_instance.mlflow_db "$DB_INSTANCE_ID"
             else
               echo "RDS instance already exists in Terraform state."
             fi
@@ -133,7 +133,7 @@ jobs:
             echo "Found existing EKS cluster: $CLUSTER_NAME"
             if ! terraform state list aws_eks_cluster.mlflow_cluster 2>/dev/null; then
               echo "Importing EKS cluster into Terraform state..."
-              terraform import aws_eks_cluster.mlflow_cluster "$CLUSTER_NAME"
+              terraform import module.eks.aws_eks_cluster.mlflow_cluster "$CLUSTER_NAME"
             else
               echo "EKS cluster already exists in Terraform state."
             fi
@@ -149,7 +149,7 @@ jobs:
             echo "Found existing S3 bucket: $BUCKET_NAME"
             if ! terraform state list aws_s3_bucket.mlflow_artifacts 2>/dev/null; then
               echo "Importing S3 bucket into Terraform state..."
-              terraform import aws_s3_bucket.mlflow_bucket "$BUCKET_NAME"
+              terraform import module.s3.aws_s3_bucket.mlflow_bucket "$BUCKET_NAME"
             else
               echo "S3 bucket already exists in Terraform state."
             fi
