--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -120,7 +120,7 @@ jobs:
           fi
 
           # EKS Cluster
-          CLUSTER_NAME="mlflow-eks-cluster-${{ env.ENVIRONMENT }}"
+          CLUSTER_NAME="mlflow-cluster-${{ env.ENVIRONMENT }}"
           echo "Checking for EKS cluster: $CLUSTER_NAME"
           if aws eks describe-cluster --name "$CLUSTER_NAME" >/dev/null 2>&1; then
             echo "Found existing EKS cluster: $CLUSTER_NAME"
