--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -168,10 +168,10 @@ jobs:
 
           if aws kms list-aliases | grep -q "$KMS_ALIAS"; then
             echo "KMS alias exists: $KMS_ALIAS"
-            
-            if ! terraform state list | grep -q 'module.eks.aws_kms_alias.this\[0\]'; then
+
+            if ! terraform state list | grep -q 'module.eks.module.eks.module.kms.aws_kms_alias.this\["cluster"\]'; then
               echo "Importing KMS alias into Terraform state..."
-              terraform import module.eks.aws_kms_alias.this[0] "$KMS_ALIAS"
+              terraform import 'module.eks.module.eks.module.kms.aws_kms_alias.this["cluster"]' "$KMS_ALIAS"
             else
               echo "KMS alias already exists in Terraform state."
             fi
